fix: scrollable when collapsed

--- a/src/angular-business/sidebar/icon-sidebar/icon-sidebar.scss
+++ b/src/angular-business/sidebar/icon-sidebar/icon-sidebar.scss
@@ -141,7 +141,7 @@
 
     &,
     .sbb-sidebar-inner-container {
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     .sbb-icon-sidebar-item {
